Fix spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
 
-.circular-battery-indicator-text {
-	margin-right: .5em;
+.circular-battery-indicator {
+	margin: 0 4px;
 }
